improve the gui for adding start launch